# sneakydl

./: Cargo.toml
crates/sneakydl/: Cargo.toml
crates/sneakydl/examples/: cli.rs
crates/sneakydl/src/: config.rs  lib.rs  result.rs  task.rs
crates/sneakydl/src/downloader/: job.rs  mod.rs  task.rs
crates/sneakydl/src/net/: mod.rs  reqwest_client.rs
crates/sneakydl/src/storage/: mod.rs  monitor.rs  tokio_file.rs  worker.rs
crates/sneakydl/src/task/: metadata.rs  mod.rs  runtime.rs
crates/sneakydl/src/worker/: metadata.rs  mod.rs  runtime.rs
crates/sneakydl/tests/: task.rs  worker.rs
