[workspace]
members = ["./crates/sneakydl/"]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
reqwest = "0.12.23"
bytes = "1.10.1"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1.17"
futures-core = "0.3.31"

chrono = "0.4.42"
uuid = {version = "1.18.1", features = [
    "v4",
]}
async-trait = "0.1.89"
anyhow = "1.0.100"

log = "0.4.28"
env_logger = "0.11.8"

strum_macros = "0.27.2"
