[workspace]
members = ["./crates/sneakydl/"]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
reqwest = "0.12.23"
bytes = "1.10.1"
tokio = "1.47.1"
tokio-stream = "0.1.17"
futures-core = "0.3.31"

chrono = "0.4.42"
uuid = "1.18.1"
async-trait = "0.1.89"
anyhow = "1.0.100"

log = "0.4.28"
env_logger = "0.11.8"

strum_macros = "0.27.2"

clap = { version = "4.5.53", features = ["derive"] }
indicatif = "0.18.3"
