[package]
name = "sneakydl"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
tokio-stream.workspace = true
futures-core.workspace = true
bytes.workspace = true
uuid.workspace = true
async-trait.workspace = true
anyhow.workspace = true
log.workspace = true

reqwest.workspace = true
[features]
default = ["reqwest/stream", "tokio/full"]
socket = ["reqwest/socks"]
cookies = ["reqwest/cookies"]
auth = ["reqwest/multipart"]

[dev-dependencies]
env_logger.workspace = true
