[package]
name = "sneakydl"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
tokio-stream.workspace = true
futures-core.workspace = true
async-trait.workspace = true

bytes.workspace = true
uuid.workspace = true

anyhow.workspace = true
log.workspace = true

strum_macros.workspace = true

reqwest = { workspace = true, optional = true }

[features]
default = ["tokio/full"]
reqwest-client = ["reqwest", "reqwest/stream"]

[dev-dependencies]
env_logger.workspace = true
