[package]
name = "sneakydl"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true, features = ["rt", "sync", "macros"] }
tokio-stream.workspace = true
futures-core.workspace = true
async-trait.workspace = true

bytes.workspace = true
uuid.workspace = true

anyhow.workspace = true
log.workspace = true

strum_macros.workspace = true

reqwest = { workspace = true, optional = true }

[features]
default = []

reqwest-client = ["reqwest", "reqwest/stream"]
tokio-storage = ["tokio/fs"]

[dev-dependencies]
env_logger.workspace = true
tokio = { workspace = true, features = ["test-util"]}
